# marigold

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TESTING.md  deny.toml  dev-install.sh  hello_world.marigold  install.sh  install_test.sh  program.marigold  publish.sh  rust-toolchain.toml
.github/: actions.yml
examples/bounded-types/: Cargo.toml
examples/bounded-types/compile_fail/: keep_first_n_zero.rs  keep_first_n_zero.stderr  min_greater_than_max.rs  min_greater_than_max.stderr  negative_bounds_uint.rs  negative_bounds_uint.stderr  negative_min_uint.rs  negative_min_uint.stderr  undefined_type_reference.rs  undefined_type_reference.stderr
examples/bounded-types/src/: main.rs
examples/color-palette-picker/: Cargo.toml
examples/color-palette-picker/benches/: color_picker_bench.rs
examples/color-palette-picker/src/: lib.rs  main.rs
examples/csv/: Cargo.toml
examples/csv/data/: ships.json  ships.jsonl  uncompressed.csv  with_missing_values.csv
examples/csv/output/: also_decompressed.csv
examples/csv/src/: main.rs
examples/fold-edge-cases/: Cargo.toml
examples/fold-edge-cases/src/: main.rs  minimal_test.rs  simple_fold_test.rs  simple_parser_test.rs
examples/jsonl/: Cargo.toml
examples/jsonl/data/: ships.jsonl
examples/jsonl/proptest-regressions/: main.txt
examples/jsonl/src/: main.rs
examples/multi-consumer/: Cargo.toml
examples/multi-consumer/src/: main.rs
examples/select-all/: Cargo.toml
examples/select-all/src/: main.rs
examples/stateful/: Cargo.toml
examples/stateful/src/: main.rs
glass/: Cargo.toml
glass/src/: main.rs
marigold/: Cargo.toml  README.md  test_run.marigold
marigold-grammar/: Cargo.toml
marigold-grammar/benches/: parser_bench.rs
marigold-grammar/fuzz/: .gitignore  Cargo.toml  README.md
marigold-grammar/fuzz/corpus/fuzz_analyze/: select_all.marigold
marigold-grammar/fuzz/corpus/fuzz_parse/: color_palette.marigold
marigold-grammar/fuzz/fuzz_targets/: fuzz_analyze.rs  fuzz_parse.rs
marigold-grammar/proptest-regressions/: complexity.txt
marigold-grammar/src/: ast.lalrpop  ast.rs  bound_expr.rs  bound_resolution.rs  complexity.rs  complexity_notation.pest  complexity_types.rs  lib.rs  marigold.pest  nodes.rs  parser.rs  pest_ast_builder.rs  static_analysis.rs  symbol_table.rs  type_aggregation.rs
marigold-grammar/tests/: bisect_cardinality.rs  bisect_complexity.rs  complexity_unit.rs  e2e_cardinality.rs  e2e_cardinality_extended.rs  e2e_complexity.rs  e2e_json_io.rs  e2e_parse.rs  no_gpg_config_workaround.rs  parse_api_tests.rs  parse_codegen.rs  parser_error_messages.rs  parser_errors.rs  proptest_analyze.proptest-regressions  proptest_analyze.rs  range_enum_cardinality.rs  type_aggregation_tests.rs
marigold-grammar/tests/programs/: card_chain.marigold  card_combinations.marigold  card_empty_range.marigold  card_filter.marigold  card_filter_keep_first_n.marigold  card_filter_map.marigold  card_filter_take.marigold  card_fold.marigold  card_keep_first_n.marigold  card_left_exact.marigold  card_map.marigold  card_multi_consumer.marigold  card_permutations.marigold  card_permutations_with_replacement.marigold  card_range.marigold  card_range_enum_four.marigold  card_range_enum_sized_default.marigold  card_range_enum_with_default_value.marigold  card_range_inclusive.marigold  card_read_file.marigold  card_read_file_jsonl.marigold  card_read_file_map.marigold  card_right_exact.marigold  card_single_element.marigold  card_take.marigold  card_take_exceeds.marigold  card_take_while.marigold  chain_space.marigold  chained_maps.marigold  chained_maps.mg  color_palette.marigold  left_linear.marigold  left_quadratic.marigold  left_space.marigold  map_space.marigold  map_write_file.marigold  multi_consumer.marigold  no_fn_decl.marigold  parse_fn_and_map.marigold  right_linear.marigold  (+8 more)
marigold-impl/: Cargo.toml
marigold-impl/benches/: check_regression.sh  collect_all_data.sh  compare_baseline.sh  cpu_utilization.rs  driver_worker_split.rs  json_io.rs  keep_first_n.rs  map_filter_utilization.rs  per_item_costs.rs  pipeline_stages.rs  render_cpu_chart.sh  run_cpu_profile.sh  sample_cpu.sh  thresholds.json
marigold-impl/benches/results/: README.md  bench_summary_16core.md  cited_results.md  cpu_utilization.txt  raw_results.md
marigold-impl/benches/results/16core/: cited_results.md  cpu_utilization.txt  driver_worker_split.txt
marigold-impl/benches/results/16core/criterion/compare_by_sum_array3/base/: estimates.json
marigold-impl/benches/results/a1bd575/16core-laptop/: machine_info.txt
marigold-impl/benches/results/a1bd575/4core-ci/: driver_worker_split.txt  machine_info.txt  summary.md
marigold-impl/benches/results/criterion/arc_clone_x2/new/: estimates.json
marigold-impl/benches/results/criterion/bench_color_picker/new/: estimates.json
marigold-impl/benches/results/criterion/mutex_heap_peek_pop_push/new/: estimates.json
marigold-impl/benches/results/criterion/rwlock_read_compare/new/: estimates.json
marigold-impl/benches/results/criterion/stream_advance_enumerate_next/new/: estimates.json
marigold-impl/benches/results/criterion/tokio_spawn_join/new/: estimates.json
marigold-impl/proptest-regressions/: keep_first_n.txt
marigold-impl/src/: async_runtime.rs  collect_and_apply.rs  combinations.rs  csv_core.rs  json_io.rs  keep_first_n.rs  lib.rs  marifold.rs  multi_consumer_stream.rs  partition.rs  permutations.rs  run_stream.rs  to_vec.rs  writer.rs
marigold-impl/tests/: collect_and_apply_edge_cases.rs  combinations_edge_cases.rs  keep_first_n_edge_cases.rs  marifold_edge_cases.rs  multi_consumer_stream_edge_cases.rs  multi_consumer_stream_tests.rs  permutations_edge_cases.rs  run_future_as_stream.rs  writer_edge_cases.rs  writer_tests.rs
marigold-macros/: Cargo.toml
marigold-macros/src/: lib.rs
marigold/src/: lib.rs  main.rs
tests/: Cargo.toml
tests/src/: lib.rs  oracle.rs  scaling_tests.rs
tests/tests/: macro_edge_cases.rs
tests/ui/: bad_syntax.rs  bad_syntax.stderr  range_unknown_enum.rs  range_unknown_enum.stderr
(+70 files in other folders)
