[workspace]
members = [
  "marigold",
  "marigold-macros",
  "marigold-grammar",
  "marigold-impl",
  "examples/color-palette-picker",
  "examples/csv",
  "examples/multi-consumer",
  "examples/select-all",
  "examples/stateful",
  "examples/bounded-types",
  "tests",
  "verification"
]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
