[package]
name = "glass"
version = "0.1.0"
edition = "2021"
authors = ["Dominic <code@dominic.computer>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }

[dependencies.glass-grammar]
path = "../glass-grammar"

[dependencies.glass-macros]
path = "../glass-macros"
