[package]
name = "marigold-grammar"
version = "0.1.16"
edition = "2021"
authors = ["Dominic <code@dominic.computer>"]
description = "Grammar for the marigold language."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/DominicBurkart/marigold"

[features]
io = []

[dependencies]
pest = "2.7"
pest_derive = "2.7"
regex = "1"
num-traits = "0.2"
itertools = "0.10.2"
lazy_static = "1.4"
rusymbols = "0.1.2"
num-bigint = "0.4"
arrayvec = "0.7"
once_cell = "1.15.0"
thiserror = "1.0.61"
