[package]
name = "marigold-grammar"
version = "0.1.16"
edition = "2021"
authors = ["Dominic <code@dominic.computer>"]
build = "build.rs"
description = "Grammar for the marigold language."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/DominicBurkart/marigold"

[features]
default = []
pest-parser = ["pest", "pest_derive"]
io = []
tokio = []
async-std = []

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
lalrpop-util = {version="0.19.8", features=["lexer"]}
regex = "1"
num-traits = "0.2"
itertools = "0.10.2"
lazy_static = "1.4"
rusymbols = "0.1.2"
num-bigint = "0.4"
arrayvec = "0.7"
once_cell = "1.15.0"
pest = { version = "2.7", optional = true }
pest_derive = { version = "2.7", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parser_bench"
harness = false
