[package]
name = "marigold-grammar"
version = "0.1.17"
edition = "2021"
authors = ["Dominic <code@dominic.computer>"]
description = "Grammar for the marigold language."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/DominicBurkart/marigold"

[features]
default = []
io = []
tokio = []
async-std = []

[dependencies]
num-traits = "0.2"
itertools = "0.10.2"
num-bigint = "0.4"
arrayvec = "0.7"
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
tempfile = "3"

[[bench]]
name = "parser_bench"
harness = false
