[package]
name = "marigold-impl"
version = "0.1.9"
edition = "2021"
authors = ["Dominic <code@dominic.computer>"]
description = "Internal logic for the marigold language."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/DominicBurkart/marigold"

[features]
default = ["io"]
tokio = ["dep:tokio", "dep:num_cpus"]
async-std = ["dep:async-std", "dep:num_cpus"]
io = ["dep:async-std", "dep:csv-async"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.2"
futures = "0.3"
async-trait = "0.1.53"
binary-heap-plus = "0.4.1"
gen-nested-iter-yield = "=0.1.3"
genawaiter = {version = "0.99.1", features = ["futures03"]}
parking_lot = "0.12.0"
tokio = { version = "1", features = ["full", "tracing"], optional=true }
async-std = { version = "1", optional=true}
num_cpus = {version="1.13.1", optional=true}
tracing = "0.1"
csv-async = {version="1.2", optional=true}

[dev-dependencies]
tokio = { version = "1", features = ["full"]}
