[package]
name = "marigold-macros"
version = "0.1.0"
edition = "2021"
authors = ["Dominic <code@dominic.computer>"]
description = "Macros for the marigold language."
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.marigold-grammar]
path = "../marigold-grammar"
version = "0.1"
