[package]
name = "marigold-macros"
version = "0.1.11"
edition = "2021"
authors = ["Dominic <code@dominic.computer>"]
description = "Macros for the marigold language."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/DominicBurkart/marigold"


[lib]
proc-macro = true

[features]
io = ["marigold-grammar/io"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"

[dependencies.marigold-grammar]
path = "../marigold-grammar"
version = "=0.1.11"
