[package]
name = "marigold-macros"
version = "0.1.17"
edition = "2021"
authors = ["Dominic <code@dominic.computer>"]
description = "Macros for the marigold language."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/DominicBurkart/marigold"


[lib]
proc-macro = true

[features]
io = ["marigold-grammar/io"]

[dependencies]

[dependencies.marigold-grammar]
path = "../marigold-grammar"
version = "=0.1.17"
