[package]
name = "marigold"
version = "0.1.2"
edition = "2021"
authors = ["Dominic <code@dominic.computer>"]
description = "The Marigold Programming Language."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/DominicBurkart/marigold"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }

[dependencies.marigold-grammar]
path = "../marigold-grammar"
version = "=0.1.2"

[dependencies.marigold-macros]
path = "../marigold-macros"
version = "=0.1.2"

[dependencies.marigold-impl]
path = "../marigold-impl"
version = "=0.1.2"

[dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
