[package]
name = "marigold"
version = "0.1.17"
edition = "2021"
authors = ["Dominic <code@dominic.computer>"]
description = "The Marigold Programming Language."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/DominicBurkart/marigold"

[features]
tokio = ["marigold-impl/tokio"]
async-std = ["marigold-impl/async-std"]
io = ["marigold-impl/io", "marigold-grammar/io", "marigold-macros/io"]
cli = ["clap", "convert_case", "home"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.27", features = ["derive"], optional = true }
convert_case = { version="0.6.0", optional = true }
home = { version = "0.5.4", optional = true }

[dependencies.marigold-grammar]
path = "../marigold-grammar"
version = "=0.1.17"

[dependencies.marigold-macros]
path = "../marigold-macros"
version = "=0.1.17"

[dependencies.marigold-impl]
path = "../marigold-impl"
version = "=0.1.17"

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
