[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.marigold]
path = "../marigold"
version = "=0.1.14"

[dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
