[package]
name = "bounded-types"
version = "0.1.0"
publish = false
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
marigold = {path = "../../marigold", version = "=0.1.17"}
tokio = {version = "1", features = ["rt", "macros"]}

[dev-dependencies]
tokio = {version = "1", features = ["rt", "macros"]}
trybuild = "1"
