[package]
name = "color-palette-picker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1", features = ["rt", "macros"]}
prisma = "0.1.1"
cute = "0.3.0"
once_cell = "1.10.0"
tracing = "0.1"
console-subscriber = {version="0.1.4", optional=true }

[features]
tokio = ["dep:console-subscriber", "marigold/tokio", "tokio/rt-multi-thread", "tokio/tracing"] # parallelization using the tokio runtime

[dependencies.marigold]
path = "../../marigold"
version = "=0.1.8"

[dev-dependencies]
criterion = {version="0.3", features=["async_tokio"]}

[[bench]]
name = "color_picker_bench"
harness = false
