[package]
name = "fold-edge-cases"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = {version = "1", features = ["full"]}

[dependencies.marigold]
path = "../../marigold"
version = "=0.1.16"

# Parser test has known issues with multi-function parsing
# [[bin]]
# name = "simple-parser-test" 
# path = "src/simple_parser_test.rs"

[[bin]]
name = "minimal-test"
path = "src/minimal_test.rs"

[[bin]]
name = "simple-fold-test"
path = "src/simple_fold_test.rs"