[package]
name = "marigold-grammar-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.marigold-grammar]
path = ".."

[workspace]

[[bin]]
name = "fuzz_parse"
path = "fuzz_targets/fuzz_parse.rs"
doc = false

[[bin]]
name = "fuzz_analyze"
path = "fuzz_targets/fuzz_analyze.rs"
doc = false
